# matter-thread2mqtt

./: .gitignore  Dockerfile  Makefile  entrypoint.sh
3dprint/: esp32-c3-pico.scad
fw/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
fw/host_driver/: Makefile  host  host.c
fw/main/: CMakeLists.txt  app_bt.c  bt.h  esp_ot_config.h  mux.c  mux.h  spinel.c  spinel.h
mqtt_bridge/: matter-discover.py  matter-light-ctl.py  matter-ws-check.py
s6-overlay/s6-rc.d/avahi/: run
s6-overlay/s6-rc.d/avahi-log/: run
s6-overlay/s6-rc.d/bluetoothd/: run
s6-overlay/s6-rc.d/bluetoothd-log/: run
s6-overlay/s6-rc.d/dbus/: run
s6-overlay/s6-rc.d/dbus-log/: run
s6-overlay/s6-rc.d/matter-server/: producer-for  run
s6-overlay/s6-rc.d/matter-server-log/: consumer-for  run
s6-overlay/s6-rc.d/ot-infra/: up
s6-overlay/s6-rc.d/otbr-agent/: producer-for  run
s6-overlay/s6-rc.d/otbr-agent-log/: consumer-for  run
s6-overlay/s6-rc.d/otbr-agent-net/: up
s6-overlay/s6-rc.d/rcp-watchdog/: run
scripts/: bt-host-check.sh  mt2mqtt-status.sh
